# models/user_basic.go
@@ -53,3 +53,8 @@ type Relation struct {
 func (r *Relation) TableName() string {
 	return "relation"
 }
+
+type LoginRequest struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
